Fix overlapping brand items

--- a/packages/frontend/style.scss
+++ b/packages/frontend/style.scss
@@ -268,6 +268,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+	flex-wrap: wrap;
 }
 
 // .pwb-all-brands .pwb-brands-cols-outer .pwb-brands-col3 > p:first-child {
